# halloween-show-creator

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  spacetime-agent.md  spacetime.json
.cargo/: config.toml
.github/workflows/: deploy-pages.yml
assets/: dmx-projector.json
assets/scenes/: fixtures.glb
docs/: architecture.md  blender-scenes.md
spacetimedb/: Cargo.toml
spacetimedb/src/: lib.rs
src/: audio.rs  auth.rs  conn.rs  cookies.rs  export.rs  logic.rs  main.rs  patterns.rs  projector_patterns.rs  scene.rs  state.rs  stick_font.rs  ui.rs  upload.rs
src/module_bindings/: append_edit_reducer.rs  begin_song_upload_reducer.rs  delete_blueprint_reducer.rs  delete_fixture_region_reducer.rs  edit_type.rs  fork_project_reducer.rs  insert_blueprint_reducer.rs  laser_kf_table.rs  light_edit_input_type.rs  mod.rs  paste_projector_keyframes_reducer.rs  paste_turret_keyframes_reducer.rs  pattern_table.rs  project_table.rs  project_type.rs  projector_keyframe_input_type.rs  projector_keyframe_type.rs  projector_kf_table.rs  seed_light_edits_reducer.rs  seed_project_reducer.rs  seed_projector_keyframes_reducer.rs  seed_song_chunk_reducer.rs  seed_song_reducer.rs  set_projector_keyframe_reducer.rs  song_chunk_table.rs  song_chunk_type.rs  song_table.rs  turret_keyframe_input_type.rs  turret_kf_table.rs
tools/show-seeder/: Cargo.toml
tools/show-seeder/src/: main.rs
tools/show-seeder/src/module_bindings/: append_edits_reducer.rs  append_song_chunk_reducer.rs  create_project_reducer.rs  delete_song_reducer.rs  edit_log_table.rs  laser_keyframe_input_type.rs  laser_keyframe_type.rs  laser_point_type.rs  mod.rs  paste_laser_keyframes_reducer.rs  pattern_type.rs  project_type.rs  save_blueprint_reducer.rs  seed_laser_keyframes_reducer.rs  seed_pattern_reducer.rs  seed_turret_keyframes_reducer.rs  set_laser_keyframe_reducer.rs  set_turret_keyframe_reducer.rs  song_type.rs  turret_keyframe_type.rs
